angular-reference/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: angular
  namespace: angular
  labels:
    app: angular
spec:
  selector:
    matchLabels:
      app: angular
  template:
    metadata:
      labels:
        app: angular
    spec:
      containers:
      - name: angular
        image: magnifikacr.azurecr.io/reference-angular:develop-8eaa6b90-22 # {"$imagepolicy": "flux-system:angular"}
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080 # it doesnt really matter - port-forward or service should point to port 80 where nginx is listening
      imagePullSecrets:
      - name: acr-cred
