angular-reference/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular
  namespace: angular
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: angular
            port:
              number: 8080
        pathType: Prefix
        path: /
    host: angular.magnifikbutik.eu
  tls:
  - hosts:
    - angular.magnifikbutik.eu
    secretName: angular-tls
